--- a/src/components/TopBar.module.scss
+++ b/src/components/TopBar.module.scss
@@ -14,6 +14,34 @@
   h1 {
     font-size: 3rem;
     font-family: "Montserrat";
+    top: -3px;
+    position: relative;
+    display: flex;
+    gap: 0.2rem;
+
+    span {
+      display: block;
+      position: relative;
+      font-size: 2rem;
+      border-bottom: 2px solid white;
+      height: 35px;
+      width: 20px;
+
+      &::after {
+        content: 'ё';
+        position: absolute;
+        top: -0px;
+        left: -0px;
+        // border-bottom: 1px solid white;
+      }
+
+      &::before {
+        content: 'я';
+        position: absolute;
+        top: 24px;
+        left: -0px;
+      }
+    }
   }
 
   .space {
