--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,18 +1,20 @@
-/* .canvas {
-  height: calc(100vh - 60px);
-} */
+.canvas {
+  width: 30%;
+  height: 100%;
+  padding-block: 1rem;
+  cursor: grab;
+}
+
+.canvas:active {
+  cursor: grabbing;
+}
 
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 60px);
-  cursor: grab;
   position: relative;
-}
-
-.main:active {
-  cursor: grabbing;
 }
 
 .popup {
@@ -33,4 +35,10 @@
 .popup h2 {
   font-size: 16px;
   padding-bottom: 0.5rem;
+}
+
+@media (max-width: 1024px) {
+  .canvas {
+    width: 100%;
+  }
 }
