--- a/src/components/info/style.module.scss
+++ b/src/components/info/style.module.scss
@@ -6,7 +6,7 @@
   height: calc(100% - 2rem);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 1rem;
 }
 
 .live {
