--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
   --bgColor: #262626;
   --bgColor2: #303030;
   --bgColor3: #111111;
+  --bgColor4: #383838;
+  --bgColor5: #1b1b1b;
   --textColor: #ebede7;
   --textColor2: rgb(200, 200, 200);
   --primaryColor: #d59e4d;
